[package]
name         = "tako-runtime"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "Tokio runtime helpers for tako: budgets, breakers, retries, rate limiters, fallback."

[lints]
workspace = true

[dependencies]
tako-core          = { workspace = true }
async-trait        = { workspace = true }
futures            = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
governor           = { workspace = true }
failsafe           = { workspace = true }
backoff            = { workspace = true }
rand               = "0.8"

[dev-dependencies]
tokio-test         = { workspace = true }
