[package]
name         = "tako-providers-azure-openai"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "Azure OpenAI provider for tako (chat.completions wire format, Azure URL + api-key auth)."

[lints]
workspace = true

[dependencies]
tako-core             = { workspace = true }
tako-providers-openai = { workspace = true }
async-trait           = { workspace = true }
futures               = { workspace = true }
tokio                 = { workspace = true }
tracing               = { workspace = true }
thiserror             = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
reqwest               = { workspace = true }
url                   = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio    = { workspace = true, features = ["full"] }
