[package]
name         = "tako-providers-mistral"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "Mistral La Plateforme chat.completions provider for tako."

[lints]
workspace = true

[dependencies]
tako-core          = { workspace = true }
async-trait        = { workspace = true }
futures            = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
reqwest            = { workspace = true }
eventsource-stream = { workspace = true }
url                = { workspace = true }
bytes              = { workspace = true }
async-stream       = "0.3"

[dev-dependencies]
wiremock           = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
